--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,13 @@ base_version=13.0
 unstable=false
 supported_version=1.20.2
 minecraft_version=1.20.2
-forgeEnabled=true
+platforms=fabric,forge,neoforge
 forge_version=48.0.1
+neoforge_version=20.2.52-beta
 fabricloader_version=0.14.22
-cloth_config_version=12.0.109
+cloth_config_version=12.0.111
 modmenu_version=7.0.0
 fabric_api=0.89.2+1.20.2
-architectury_version=10.0.8
+architectury_version=10.0.13
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
