Update NeoForge and Architectury API

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,12 @@ unstable=false
 supported_version=1.20.2
 minecraft_version=1.20.2
 platforms=fabric,forge,neoforge
-forge_version=48.0.1
-neoforge_version=20.2.52-beta
+forge_version=48.1.0
+neoforge_version=20.2.86
 fabricloader_version=0.14.22
 cloth_config_version=12.0.111
 modmenu_version=7.0.0
 fabric_api=0.89.2+1.20.2
-architectury_version=10.0.13
+architectury_version=10.0.17
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
