--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -294,3 +294,10 @@ unifiedPublishing {
         }
     }
 }
+
+// I hate Forge
+sourceSets.each {
+    def dir = layout.buildDirectory.dir("sourcesSets/$it.name")
+    it.output.resourcesDir = dir
+    it.java.destinationDirectory = dir
+}
