--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 org.gradle.jvmargs=-Xmx6G
-base_version=13.0
+base_version=14.0
 unstable=false
-supported_version=1.20.2
-minecraft_version=1.20.2
+supported_version=1.20.4
+minecraft_version=1.20.4
 platforms=fabric,forge,neoforge
-forge_version=48.1.0
-neoforge_version=20.2.86
-fabricloader_version=0.14.22
-cloth_config_version=12.0.111
+forge_version=49.0.3
+neoforge_version=20.4.5-beta
+fabricloader_version=0.15.1
+cloth_config_version=13.0.114
 modmenu_version=7.0.0
-fabric_api=0.89.2+1.20.2
-architectury_version=10.0.17
+fabric_api=0.91.2+1.20.4
+architectury_version=11.0.8
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
