--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ include "api"
 include "default-plugin"
 include "runtime"
 include "fabric"
-//include "forge"
+include "forge"
 include "neoforge"
