--- a/neoforge/src/serverComponent/resources/META-INF/mods.toml
+++ b/neoforge/src/serverComponent/resources/META-INF/mods.toml
@@ -15,14 +15,14 @@ To allow players to view items and recipes.
 
 [[dependencies.roughlyenoughitems_servercomponent]]
 modId = "architectury"
-mandatory = true
+type = "required"
 versionRange = "[5.7,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.roughlyenoughitems_servercomponent]]
 modId = "cloth_config"
-mandatory = true
+type = "required"
 versionRange = "[7.0,)"
 ordering = "NONE"
 side = "BOTH"
