--- a/.github/workflows/curseforge.yml
+++ b/.github/workflows/curseforge.yml
@@ -18,6 +18,7 @@ on:
       - 12.x-1.20
       - 13.x-1.20.2
       - 14.x-1.20.4
+      - 15.x-1.20.5
 
 jobs:
   build:
@@ -32,7 +33,7 @@ jobs:
       - name: Upload Mod
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: build publish forge:publishUnified neoforge:publishUnified fabric:publishUnified --stacktrace
+          arguments: build publish publishUnified --stacktrace
         env:
           danielshe_curse_api_key: ${{ secrets.CF_API_KEY }}
           modrinth_key: ${{ secrets.MODRINTH_KEY }}
