--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 org.gradle.jvmargs=-Xmx6G
 base_version=14.0
-unstable=false
-supported_version=1.20.4
-minecraft_version=1.20.4
-platforms=fabric,forge,neoforge
+unstable=true
+supported_version=1.20.5 (24w09a)
+minecraft_version=24w09a
+platforms=fabric
 forge_version=49.0.3
 neoforge_version=20.4.48-beta
-fabricloader_version=0.15.1
-cloth_config_version=13.0.121
+fabricloader_version=0.15.7
+cloth_config_version=14.0.122
 modmenu_version=7.0.0
-fabric_api=0.91.2+1.20.4
-architectury_version=11.0.9
+fabric_api=0.96.5+1.20.5
+architectury_version=12.0.14
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
